<resources>
    <string name="app_name">JetPlanner</string>
    <string name="todays_plan">Today\'s Plan!</string>
    <string name="preview">Preview</string>
    <string name="current_task">Current Task</string>
    <string name="create_task">Create Task</string>
    <string name="modify_task">Update Task</string>
    <string name="dismiss">Dismiss</string>
    <string name="done">Done</string>
    <string name="save">Save</string>
    <string name="from"><u>FROM</u></string>
    <string name="to"><u>TO</u></string>
    <string name="task">Task</string>
    <string name="separator_dash">-</string>
    <string name="nothing_for_now">Nothing for now…</string>
    <string name="let_get_some_work_done">Let\'s get some work done!</string>
</resources>